--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Switch Button</title>
-  </head>
-  <body>
-    <h1>Hello DeeShaa 🔘</h1>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Switch Mode</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body class="light-mode">
+
+  <label class="switch">
+    <input type="checkbox" id="mode-toggle" checked>
+    <span class="slider"></span>
+  </label>
+
+  <script src="script.js"></script>
+</body>
 </html>
