--- a/index.html
+++ b/index.html
@@ -2,17 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Switch Mode</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Button</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="light-mode">
-
-  <label class="switch">
-    <input type="checkbox" id="mode-toggle" checked>
-    <span class="slider"></span>
-  </label>
-
-  <script src="script.js"></script>
+<body>
+  <button>Switch</button>
 </body>
 </html>
